--- a/src/styles/home.scss
+++ b/src/styles/home.scss
@@ -6,17 +6,19 @@
         letter-spacing: 0.22em;
         line-height: 1;
         font-size: 18px;
-        // @media screen and (min-width: $break--min) and (max-width: $break--tblt) {
-        //     font-size: calc(18px + (99 - 18) * ((100vw - 200px) / (768 - 200)));
-        // }
-        // @media screen and (min-width: $break--tblt) and (max-width: $break--dsktp--lg){
-        //     padding: 20px;
-        //     font-size: calc(95px + (191 - 95) * ((100vw - 768px) / (1440 - 768)));
-        // }
-        // @media screen and (min-width: $break--dsktp--lg){
-        //     padding: 20px;
-        //     font-size: calc(191px + (271 - 191) * ((100vw - 1440px) / (2000 - 1440)));
-        // }
+        padding: 5px;
+        @media screen and (min-width: $break--min) and (max-width: $break--tblt) {
+          padding: calc(5px + (20 - 5) * ((100vw - 200px) / (768 - 200)));
+          font-size: calc(18px + (90 - 18) * ((100vw - 200px) / (768 - 200)));
+        }
+        @media screen and (min-width: $break--tblt) and (max-width: $break--dsktp--lg){
+          padding: 20px;
+          font-size: calc(46px + (94 - 46) * ((100vw - 768px) / (1440 - 768)));
+        }
+        @media screen and (min-width: $break--dsktp--lg){
+            padding: 20px;
+            font-size: calc(94px + (135 - 94) * ((100vw - 1440px) / (2000 - 1440)));
+        }
       }
       
       p {
